# PX4-ROS2

./: LICENSE  README.md  bytetrack.yaml  default.sdf  model.sdf
camera_detection/: package.xml  setup.py
camera_detection/camera_detection/: commander.py  yolo_processor_depth.py  yolo_processor_node.py  yolo_processor_sim_node.py
camera_detection/launch/: combined_launch.py
offboard/: CMakeLists.txt  package.xml
offboard/src/: offboard_control.cpp  offboard_sim_riul_rtl.cpp  offboard_sim_waypoints.cpp  offboard_tracking_control.cpp
opencv_webcam_pub/: CMakeLists.txt  package.xml
opencv_webcam_pub/src/: opencv_webcam_pub.cpp
opencv_webcam_sub/: CMakeLists.txt  package.xml
opencv_webcam_sub/src/: opencv_webcam_sub.cpp
yolo_detection/: package.xml  setup.py
yolo_detection/yolo_detection/: siyi_camera.py  yolo_tracker.py
