<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_webcam_sub</name>
  <version>0.0.0</version>
  <description>OpenCV Webcam Subscriber</description>
  <maintainer email="seyeong@todo.todo">seyeong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>